calendarday layout issue fix.

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -680,11 +680,11 @@ g.nv-axisMaxMin.nv-axisMaxMin-x.nv-axisMax-x {
     }
 }
 
-calendar-md {
+/*calendar-md {
     min-height: 400px !important;
     height: 400px !important;
     max-height: 400px !important;
-}
+}*/
 
 #calendar-list {
     padding-top: 0px;
